--- a/package.json
+++ b/package.json
@@ -88,6 +88,10 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "image-filter-core": "^2.0.2",
+    "image-filter-grayscale": "^1.0.1",
+    "image-filter-sepia": "^1.0.1",
+    "react-image-filter": "^0.1.2",
     "react-webcam": "^0.2.0"
   }
 }
