--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "version": "0.0.1",
   "description": "Allows users to take and save pictures on their mendix applications.",
   "scripts": {
-    "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec grunt",
-    "pretest": "tsc && npm run lint && grunt release",
-    "test": "karma start --single-run --codeCoverage && node tests/remap.js",
+    "build": "grunt release",
     "emit": "tsc",
-    "lint": "tslint -c tslint.json '**/*.ts' '**/*.tsx' --exclude '**/node_modules/**'"
+    "lint": "tslint -c tslint.json '**/*.ts' --exclude '**/node_modules/**'",
+    "lint:fix": "npm run lint -- --fix",
+    "pretest": "tsc && npm run lint && npm run build",
+    "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt",
+    "test": "npm run test:unit && npm run test:conditional",
+    "test:conditional": "node ./node_modules/mendix-widget-build-script/dist/CheckPullRequestFromFork.js && echo 'Skip tests on forked pull request' || npm run deployAndTest",
+    "test:dev": "karma start",
+    "test:unit": "karma start --single-run --codeCoverage && node tests/remap.js"
   },
   "pre-commit": [
     "pretest",
@@ -30,60 +35,63 @@
     ]
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.3",
-    "@types/core-js": "^0.9.43",
-    "@types/enzyme": "^2.8.4",
-    "@types/jasmine": "^2.6.2",
-    "@types/karma": "^0.13.35",
-    "@types/prop-types": "^15.5.2",
-    "@types/react": "^15.6.6",
-    "@types/react-dom": "^15.5.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "copy-webpack-plugin": "^4.2.0",
-    "css-loader": "^0.28.7",
-    "enzyme": "^2.7.1",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "@types/classnames": "^2.2.1",
+    "@types/core-js": "^0.9.42",
+    "@types/enzyme": "^2.8.6",
+    "@types/jasmine": "^2.5.53",
+    "@types/karma": "^0.13.36",
+    "@types/react": "^16.0.2",
+    "@types/react-autosuggest": "^8.0.2",
+    "@types/react-dom": "^15.5.3",
+    "@types/webdriverio": "^4.8.4",
+    "check-dependencies": "^1.0.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "core-js": "^2.5.0",
+    "css-loader": "^0.28.2",
+    "enzyme": "^2.9.1",
+    "extract-text-webpack-plugin": "^3.0.0",
     "grunt": "1.0.1",
     "grunt-check-dependencies": "^1.0.0",
     "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-compress": "^1.4.0",
+    "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-file-append": "0.0.7",
-    "grunt-newer": "^1.1.1",
+    "grunt-newer": "^1.3.0",
     "grunt-webpack": "^3.0.2",
     "istanbul": "^0.4.3",
     "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine": "^2.9.0",
-    "json-loader": "^0.5.7",
-    "karma": "^1.7.1",
+    "jasmine": "^2.7.0",
+    "json-loader": "^0.5.4",
+    "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.5",
-    "mendix-client": "https://github.com/FlockOfBirds/Mendix-client-typing/archive/7.1.0.tar.gz",
-    "node-sass": "^4.6.0",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "^2.0.4",
+    "mendix-client": "^7.6.3",
+    "mendix-widget-build-script": "^1.0.0-beta3",
+    "node-sass": "^4.5.2",
+    "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
-    "react": "^15.6.2",
-    "react-addons-test-utils": "^15.6.2",
+    "react": "^15.6.1",
+    "react-addons-test-utils": "^15.6.0",
+    "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1",
     "remap-istanbul": "^0.9.0",
-    "sass-loader": "^6.0.6",
-    "source-map-loader": "^0.2.0",
+    "sass-loader": "^6.0.3",
+    "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
-    "ts-loader": "^2.3.2",
-    "tslint": "^5.8.0",
-    "tslint-eslint-rules": "^4.0.0",
-    "typescript": "^2.6.1",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4",
-    "webpack-merge": "^4.1.1"
+    "ts-loader": "^2.2.2",
+    "tslint": "^5.6.0",
+    "tslint-eslint-rules": "^4.1.0",
+    "typescript": "^2.4.2",
+    "webpack": "^3.5.4",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
     "classnames": "^2.2.5",
