--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "version": "0.0.1",
   "description": "Allows users to take and save pictures on their mendix applications.",
   "scripts": {
-    "build": "grunt release",
+    "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec grunt",
     "emit": "tsc",
-    "lint": "tslint -c tslint.json '**/*.ts' --exclude '**/node_modules/**'",
-    "lint:fix": "npm run lint -- --fix",
     "pretest": "tsc && npm run lint && npm run build",
-    "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt",
     "test": "npm run test:unit && npm run test:conditional",
     "test:conditional": "node ./node_modules/mendix-widget-build-script/dist/CheckPullRequestFromFork.js && echo 'Skip tests on forked pull request' || npm run deployAndTest",
     "test:dev": "karma start",
-    "test:unit": "karma start --single-run --codeCoverage && node tests/remap.js"
+    "test:unit": "karma start --single-run --codeCoverage && node tests/remap.js",
+    "test:e2e": "tsc -p ./tests/e2e/tsconfig.json && wdio ./tests/e2e/wdio.conf.js",
+    "test:e2e:dev": "tsc -p ./tests/e2e/tsconfig.json && set DEBUG=true&& wdio ./tests/e2e/wdio.conf.js",
+    "lint": "tslint -c tslint.json '**/*.ts' '**/*.tsx' --exclude '**/node_modules/**'",
+    "lint:fix": "npm run lint -- --fix",
+    "deploy": " npm run updateProject && npm run deployApp",
+    "build": "grunt release",
+    "updateProject": "node ./node_modules/mendix-widget-build-script/dist/UpdateMxProject.js",
+    "deployApp": "node ./node_modules/mendix-widget-build-script/dist/DeployMxApp.js",
+    "deployAndTest": "npm run deploy && npm run test:e2e"
   },
   "pre-commit": [
     "pretest",
@@ -73,7 +79,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.4",
     "mendix-client": "^7.6.3",
-    "mendix-widget-build-script": "^1.0.0-beta3",
+    "mendix-widget-build-script": "^1.0.0-rc2",
     "node-sass": "^4.5.2",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
@@ -89,6 +95,11 @@
     "tslint": "^5.6.0",
     "tslint-eslint-rules": "^4.1.0",
     "typescript": "^2.4.2",
+    "wdio-dot-reporter": "0.0.9",
+    "wdio-jasmine-framework": "^0.3.2",
+    "wdio-selenium-standalone-service": "0.0.9",
+    "wdio-spec-reporter": "^0.1.1",
+    "webdriverio": "^4.10.0",
     "webpack": "^3.5.4",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0"
