--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "description": "Allows users to take and save pictures on their mendix applications.",
   "scripts": {
-    "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec grunt",
+    "start": "nodemon --watch webpack.config.js --watch Gruntfile.js --exec \"grunt",
     "emit": "tsc",
     "pretest": "tsc && npm run lint && npm run build",
     "test": "npm run test:unit && npm run test:conditional",
@@ -47,9 +47,9 @@
     "@types/jasmine": "^2.5.53",
     "@types/karma": "^0.13.36",
     "@types/react": "^16.0.2",
-    "@types/react-autosuggest": "^8.0.2",
+    "@types/enzyme-adapter-react-16": "^1.0.1",
     "@types/react-dom": "^15.5.3",
-    "@types/webdriverio": "^4.8.4",
+    "@types/webdriverio": "^4.8.2",
     "check-dependencies": "^1.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.5.0",
@@ -86,7 +86,7 @@
     "react": "^15.6.1",
     "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.6.1",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "15.6.1",
     "remap-istanbul": "^0.9.0",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.1",
@@ -98,8 +98,8 @@
     "wdio-dot-reporter": "0.0.9",
     "wdio-jasmine-framework": "^0.3.2",
     "wdio-selenium-standalone-service": "0.0.9",
-    "wdio-spec-reporter": "^0.1.1",
-    "webdriverio": "^4.10.0",
+    "wdio-spec-reporter": "^0.1.2",
+    "webdriverio": "^4.8.0",
     "webpack": "^3.5.4",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0"
