--- a/package.json
+++ b/package.json
@@ -43,18 +43,18 @@
   "devDependencies": {
     "@types/classnames": "^2.2.1",
     "@types/core-js": "^0.9.42",
-    "@types/enzyme": "^2.8.6",
+    "@types/enzyme": "^3.1.6",
     "@types/jasmine": "^2.5.53",
-    "@types/karma": "^0.13.36",
-    "@types/react": "^16.0.2",
-    "@types/enzyme-adapter-react-16": "^1.0.1",
-    "@types/react-dom": "^15.5.3",
+    "@types/karma": "^1.7.3",
+    "@types/react": "^16.0.34",
+    "@types/react-dom": "^16.0.3",
     "@types/webdriverio": "^4.8.2",
     "check-dependencies": "^1.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.5.0",
     "css-loader": "^0.28.2",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "grunt": "1.0.1",
     "grunt-check-dependencies": "^1.0.0",
@@ -83,12 +83,14 @@
     "node-sass": "^4.5.2",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
-    "react": "^15.6.1",
+    "react": "^16.2.0",
     "react-addons-test-utils": "^15.6.0",
-    "react-dom": "^15.6.1",
-    "react-test-renderer": "15.6.1",
+    "react-dom": "^16.2.0",
+    "react-reconciler": "0.7.0",
+    "react-test-renderer": "^15.6.1",
     "remap-istanbul": "^0.9.0",
     "sass-loader": "^6.0.3",
+    "selenium-webdriver": "^4.0.0-alpha.1",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.2.2",
@@ -105,6 +107,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "@types/selenium-webdriver": "^3.0.8",
     "classnames": "^2.2.5",
     "webcamjs": "^1.0.24"
   }
